--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,6 +2,11 @@
     margin:auto;
     max-width: 500px;
     font-family: sans-serif;
+    display:grid;
+    grid-template-columns: 5vw 20vw 70vw;
+    grid-template-rows: 5vw 10vw;
+    gap:10px;
+
 }
 .heading {
     color: rebeccapurple;
