--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@ body {
     overflow-x: hidden; 
     justify-content: center;
     align-items: center;
-    background: radial-gradient(ellipse at top, #142152, transparent),
-    radial-gradient(ellipse at bottom, #E32726, transparent);
+    background: 
+    radial-gradient(ellipse at top, #E32726, transparent),
+    radial-gradient(ellipse at bottom, #142152, transparent);
 }
