--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -14,13 +14,25 @@
   .nav-links {
     display: flex;
     list-style: none;
-    padding-left: 0;
+    gap: 5rem;
+    padding-bottom: 1rem;
   }
-  .nav-link-item {
-    padding-right: 2rem;
+  .nav-link-item{
+    padding-right: 0rem;
+    background-color:#A2A0A0;
+    border-radius: 5px;
+    box-shadow: 2px 2px #142152;
   }
+  .nav-link-item:hover{
+    box-shadow: 0px 0px;
+  }
+
   .nav-link-text {
-    color: black;
+    color: #142152;
+    padding:1rem;
+    justify-content: center;
+    text-decoration: none;
+    transform: translate(-50%,-50%); /*Center text items*/
   }
 .site-title{
     font-size: 3rem;
